...
                        icon: AppIcon.homeSimple(
                          color: AppColors.textSecondary,
                        ),
                        selectedIcon: AppIcon.homeSimple(
                          color: AppColors.primary,
                        ),
                        label: const Text('Home'),
                      ),
                      NavigationRailDestination(
                        icon: AppIcon.communities(
                          color: AppColors.textSecondary,
                        ),
                        selectedIcon: AppIcon.communities(
...
                        icon: AppIcon.personSimple(
                          color: AppColors.textSecondary,
                        ),
                        selectedIcon: AppIcon.personSimple(
                          color: AppColors.primary,
                        ),
                        label: const Text('Me'),
                      ),
                    ],
                  ),
                ),
              ),
              const VerticalDivider(
...
